tests/NormalTests/paczka1/fuzzy1/47966170.err
Error in line 1: mTrBt4Yz S403 5,89
Error in line 4: oTl A534 50,1
Error in line 8: mTrBt4Yz S403 28,6
Error in line 9: q7ciTXOohW S403 81,2
Error in line 17: oTl S403 50,0
Error in line 28: q7ciTXOohW S137 79,1
